# ecoledirecte_api

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  renovate.json
.github/workflows/: constraints.txt  release-drafter.yml  release.yml
src/ecoledirecte_api/: __init__.py  client.py  const.py
tests/: test_ecoledirecte_api.py
