[tool.poetry]
name = "ecoledirecte_api"
version = "0.1.0"
description = "Async Python client to interact with Ecole Directe API."
readme = "README.rst"
authors = ["Giga77","hacf-fr"]
maintainers = ["Giga77","hacf-fr"]
homepage = "https://github.com/hacf-fr/ecoledirecte_api"
repository = "https://github.com/hacf-fr/ecoledirecte_api"
packages = [
    { include = "ecoledirecte_api" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = {text = "GNU General Public License v3"}

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Warning: as of 2024-04-23, aiohttp is pinned to 3.9.5 on HA-core
aiohttp = ">=3.9.5"
backoff = ">=1.10.0,<3.0"
pyhumps = "^3.8.0"
attrs = ">=21.2,<26.0"
boto3 = "^1.18.59"
warrant-lite = "^1.0.4"
backports-strenum = { version = "^1.2.4", python = "<3.11" }

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/ecoledirecte_api/releases"
Bugs = "https://github.com/hacf-fr/ecoledirecte_api/issues"
Homepage = "https://github.com/hacf-fr/ecoledirecte_api"

[tool.poetry.group.dev.dependencies]
tox = "^4.17.1"
pytest = "^8.3.2"
pytest-cov = ">=5,<7"
pre-commit = ">=3.8,<5.0"
black = ">=24.8,<26.0"
pylint = "^3.2.6"
isort = ">=5.13.2,<7.0.0"
mypy = "^1.11.1"
flake8 = "^7.1.1"
pyupgrade = "^3.17.0"
pytest-asyncio = ">=0.23.8,<0.27.0"


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
