[project]
name = "ecoledirecte"
version = "0.2.7"
description = "Async Python client to interact with Ecole Directe API."
license = "LGPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/ecoledirecte_api"
repository = "https://github.com/hacf-fr/ecoledirecte_api"
authors = [{"name" = "Giga77"}]
maintainers = [{"name" = "Giga77"}]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: French",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiohttp>=3.13.5",
    "backoff>=1.10.0,<3.0",
]

[tool.poetry]
packages = [
   { include = "ecoledirecte_api", from = "src" }
]

[project.urls]
Changelog = "https://github.com/hacf-fr/ecoledirecte_api/releases"
homepage = "https://github.com/hacf-fr/ecoledirecte_api"
repository = "https://github.com/hacf-fr/ecoledirecte_api"
"Bug Tracker" = "https://github.com/hacf-fr/ecoledirecte_api/issues"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
safety = "==3.7.0"
mypy = "1.19.1"
typeguard = "==4.5.1"
ruff = "==0.15.8"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"